...
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <EditText
                android:id="@+id/ForgotPass_email_field"
                android:paddingEnd="15dp"
                android:paddingStart="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/input_fields_white_borders"
                android:hint="@string/hint_forgot_password_email"
...
                android:padding="10dp"
                android:layout_centerInParent="true"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/darkOrange" />

                <Button
                    android:id="@+id/Forgotpass_resetPass_button"
                    android:drawableStart="@drawable/email_icone"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:background="@drawable/input_fields_frame_grey_round"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
